@@ -4,6 +4,8 @@
 
 package org.chromium.chrome.browser.ntp;
 
+import static org.mockito.Mockito.when;
+
 import androidx.test.filters.LargeTest;
 import androidx.test.filters.MediumTest;
 
@@ -14,34 +16,43 @@ import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnit;
+import org.mockito.junit.MockitoRule;
 
+import org.chromium.base.ThreadUtils;
 import org.chromium.base.test.util.Batch;
 import org.chromium.base.test.util.CommandLineFlags;
 import org.chromium.base.test.util.CriteriaHelper;
+import org.chromium.base.test.util.Features.EnableFeatures;
 import org.chromium.chrome.browser.ChromeTabbedActivity;
+import org.chromium.chrome.browser.flags.ChromeFeatureList;
 import org.chromium.chrome.browser.flags.ChromeSwitches;
-import org.chromium.chrome.browser.profiles.Profile;
+import org.chromium.chrome.browser.profiles.ProfileManager;
+import org.chromium.chrome.browser.sync.SyncServiceFactory;
 import org.chromium.chrome.browser.tab.Tab;
 import org.chromium.chrome.browser.tab.TabSelectionType;
 import org.chromium.chrome.browser.tab.TabState;
 import org.chromium.chrome.browser.tab.TabStateExtractor;
+import org.chromium.chrome.browser.tabmodel.TabClosureParams;
 import org.chromium.chrome.browser.tabmodel.TabList;
 import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabModelFilter;
 import org.chromium.chrome.browser.tabmodel.TabModelSelector;
 import org.chromium.chrome.browser.tasks.tab_groups.TabGroupModelFilter;
-import org.chromium.chrome.browser.tasks.tab_groups.TabGroupTitleUtils;
 import org.chromium.chrome.test.ChromeJUnit4ClassRunner;
 import org.chromium.chrome.test.ChromeTabbedActivityTestRule;
 import org.chromium.chrome.test.batch.BlankCTATabInitialStateRule;
 import org.chromium.chrome.test.util.ChromeTabUtils;
-import org.chromium.content_public.browser.test.util.TestThreadUtils;
+import org.chromium.components.sync.DataType;
+import org.chromium.components.sync.SyncService;
 import org.chromium.ui.mojom.WindowOpenDisposition;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 /** Tests for {@link RecentlyClosedBridge} including native TabRestoreService. */
 @RunWith(ChromeJUnit4ClassRunner.class)
@@ -64,25 +75,31 @@ public class RecentlyClosedBridgeTest {
     public BlankCTATabInitialStateRule mBlankCTATabInitialStateRule =
             new BlankCTATabInitialStateRule(sActivityTestRule, true);
 
+    @Rule public MockitoRule mMockitoRule = MockitoJUnit.rule();
+
     private ChromeTabbedActivity mActivity;
     private TabModelSelector mTabModelSelector;
     private TabGroupModelFilter mTabGroupModelFilter;
     private TabModel mTabModel;
     private RecentlyClosedBridge mRecentlyClosedBridge;
+    @Mock private SyncService mSyncService;
 
     @Before
     public void setUp() {
+        when(mSyncService.getActiveDataTypes()).thenReturn(Set.of(DataType.SAVED_TAB_GROUP));
+        SyncServiceFactory.setInstanceForTesting(mSyncService);
+
         sActivityTestRule.waitForActivityNativeInitializationComplete();
 
         // Disable snackbars from the {@link UndoBarController} which can break this test.
         sActivityTestRule.getActivity().getSnackbarManager().disableForTesting();
 
         mActivity = sActivityTestRule.getActivity();
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge =
                             new RecentlyClosedBridge(
-                                    Profile.getLastUsedRegularProfile(),
+                                    ProfileManager.getLastUsedRegularProfile(),
                                     mActivity.getTabModelSelectorSupplier().get());
                     mRecentlyClosedBridge.clearRecentlyClosedEntries();
                     Assert.assertEquals(
@@ -101,7 +118,7 @@ public class RecentlyClosedBridgeTest {
 
     @After
     public void tearDown() {
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.clearRecentlyClosedEntries();
                     Assert.assertEquals(
@@ -111,27 +128,27 @@ public class RecentlyClosedBridgeTest {
                 });
     }
 
-    /** Tests opening the most recently closed tab in the background. */
+    /** Tests opening the most recently closed tab in the foreground. */
     @Test
     @MediumTest
-    public void testOpenMostRecentlyClosedEntry_Tab_InBackground() {
+    public void testOpenMostRecentlyClosedEntry_Tab_InForeground() {
         final String[] urls = new String[] {getUrl(TEST_PAGE_A), getUrl(TEST_PAGE_B)};
         final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
         final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
 
         final String[] titles = new String[2];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     titles[0] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
-                    mTabModel.closeTab(tabB);
-                    mTabModel.closeTab(tabA, false, false, true);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabB).allowUndo(false).build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitTabClosure(tabA.getId());
                 });
 
         final List<RecentlyClosedTab> recentTabs = new ArrayList<>();
         final int[] tabCount = new int[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     tabCount[0] = mTabModel.getCount();
                     recentTabs.addAll(
@@ -152,10 +169,10 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(2, tabs.size());
         Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    // No Renderer for background tabA.
-                    Assert.assertNull(tabs.get(1).getWebContents().getRenderWidgetHostView());
+                    // tabA is launched in foreground.
+                    Assert.assertNotNull(tabs.get(1).getWebContents().getRenderWidgetHostView());
                 });
     }
 
@@ -170,18 +187,18 @@ public class RecentlyClosedBridgeTest {
                 sActivityTestRule.loadUrlInNewTab(getUrl(TEST_PAGE_C), /* incognito= */ false);
 
         final String[] titles = new String[2];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    mTabModel.setIndex(mTabModel.indexOf(tabC), TabSelectionType.FROM_USER, false);
+                    mTabModel.setIndex(mTabModel.indexOf(tabC), TabSelectionType.FROM_USER);
                     titles[0] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
-                    mTabModel.closeTab(tabB);
-                    mTabModel.closeTab(tabA);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabB).allowUndo(false).build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).allowUndo(false).build());
                 });
 
         final List<RecentlyClosedTab> recentTabs = new ArrayList<>();
         final int[] tabCount = new int[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     tabCount[0] = mTabModel.getCount();
                     recentTabs.addAll(
@@ -206,7 +223,7 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(tabC, tabs.get(1));
         Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabC));
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabC).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     Assert.assertNotNull(tabC.getWebContents());
                     // Should only have one navigation entry as it replaced TEST_PAGE_C.
@@ -228,25 +245,25 @@ public class RecentlyClosedBridgeTest {
     public void testOpenRecentlyClosedTab_Frozen_InBackground() {
         final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
         final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
-        final Tab tabB =
-                sActivityTestRule.loadUrlInNewTab(getUrl(TEST_PAGE_B), /* incognito= */ false);
+        sActivityTestRule.loadUrlInNewTab(getUrl(TEST_PAGE_B), /* incognito= */ false);
         final Tab frozenTabA = freezeTab(tabA);
         // Clear the entry created by freezing the tab.
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.clearRecentlyClosedEntries();
                 });
 
         final String[] titles = new String[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     titles[0] = frozenTabA.getTitle();
-                    mTabModel.closeTab(frozenTabA);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTab(frozenTabA).allowUndo(false).build());
                 });
 
         final List<RecentlyClosedTab> recentTabs = new ArrayList<>();
         final int[] tabCount = new int[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     tabCount[0] = mTabModel.getCount();
                     recentTabs.addAll(
@@ -286,11 +303,11 @@ public class RecentlyClosedBridgeTest {
         final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[2];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeAllTabs();
+                    mTabModel.closeTabs(TabClosureParams.closeAllTabs().build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -302,7 +319,7 @@ public class RecentlyClosedBridgeTest {
                 recentEntries.get(0), RecentlyClosedBulkEvent.class, new String[0], titles, urls);
 
         final RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedTab(
                             mTabModel,
@@ -335,13 +352,16 @@ public class RecentlyClosedBridgeTest {
         final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[3];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -357,7 +377,7 @@ public class RecentlyClosedBridgeTest {
                 urls);
 
         final RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     // Tab order is inverted as most recent comes first so pick the last tab to
                     // restore ==
@@ -374,9 +394,9 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(2, tabs.size());
         Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
                 });
     }
 
@@ -395,12 +415,16 @@ public class RecentlyClosedBridgeTest {
         final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
 
         final String[] titles = new String[2];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[0] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabB, tabA}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -411,7 +435,7 @@ public class RecentlyClosedBridgeTest {
                 recentEntries.get(0), RecentlyClosedGroup.class, new String[] {""}, titles, urls);
 
         final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedTab(
                             mTabModel, group.getTabs().get(1), WindowOpenDisposition.CURRENT_TAB);
@@ -422,12 +446,12 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(1, tabs.size());
         Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabs.get(0)));
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(0)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(0)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(0)));
                 });
 
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedTab(
                             mTabModel,
@@ -442,16 +466,16 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(2, tabs.size());
         Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
                 });
     }
 
     /** Tests opening a specific closed {@link Tab} that was closed not as the most recent entry. */
     @Test
     @MediumTest
-    public void testOpenRecentlyClosedEntry_Tab_FromMultipleTabs() {
+    public void testOpenRecentlyClosedEntry_Tab_FromMultipleTabs_SingleTabGroup() {
         if (mTabGroupModelFilter == null) return;
 
         final String[] urlA = new String[] {getUrl(TEST_PAGE_A)};
@@ -461,13 +485,13 @@ public class RecentlyClosedBridgeTest {
 
         final String[] titleA = new String[1];
         final String[] titleB = new String[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titleA[0] = tabA.getTitle();
                     titleB[0] = tabB.getTitle();
-                    mTabModel.closeTab(tabB, false, false, true);
-                    mTabModel.closeTab(tabA, false, false, true);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabB).build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -475,10 +499,11 @@ public class RecentlyClosedBridgeTest {
         final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
         Assert.assertEquals(1, tabCount);
         Assert.assertEquals(2, recentEntries.size());
-        assertEntryIs(recentEntries.get(0), RecentlyClosedTab.class, new String[0], titleA, urlA);
+        assertEntryIs(
+                recentEntries.get(0), RecentlyClosedGroup.class, new String[] {""}, titleA, urlA);
         assertEntryIs(recentEntries.get(1), RecentlyClosedTab.class, new String[0], titleB, urlB);
 
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, recentEntries.get(1));
                 });
@@ -489,31 +514,35 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(2, tabs.size());
         Assert.assertEquals(titleB[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
         Assert.assertEquals(urlB[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
                 });
 
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, recentEntries.get(0));
                 });
 
         // 1. Blank tab
         // 2. tabB restored in new tab.
-        // 3. tabA restored in new tab.
+        // 3. tabA restored in new tab as group.
         tabs.clear();
         tabs.addAll(getAllTabs());
         Assert.assertEquals(3, tabs.size());
         Assert.assertEquals(titleA[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(2)));
         Assert.assertEquals(urlA[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(2)));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(2)));
                 });
     }
 
-    /** Tests opening a specific closed {@link Tab} that was closed as part of a group. */
+    /**
+     * Tests opening a specific closed {@link Tab} that was closed as part of a group. There is no
+     * UI that currently facilitates this flow. A Group or Bulk closure is either all restored or
+     * not.
+     */
     @Test
     @MediumTest
     public void testOpenRecentlyClosedEntry_Tab_FromGroupClosure() {
@@ -526,12 +555,15 @@ public class RecentlyClosedBridgeTest {
         final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[2];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitTabClosure(tabA.getId());
                     mTabModel.commitTabClosure(tabB.getId());
                 });
@@ -544,7 +576,63 @@ public class RecentlyClosedBridgeTest {
                 recentEntries.get(0), RecentlyClosedGroup.class, new String[] {""}, titles, urls);
 
         final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    // Tab order is inverted as most recent comes first so pick the last tab to
+                    // restore == tabA.
+                    mRecentlyClosedBridge.openRecentlyClosedEntry(
+                            mTabModel, group.getTabs().get(1));
+                });
+
+        // 1. Blank tab
+        // 2. tabA restored in new tab in a group.
+        final List<Tab> tabs = getAllTabs();
+        Assert.assertEquals(2, tabs.size());
+        Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
+        Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
+
+        // This behavior mirrors desktop.
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                });
+    }
+
+    /** Tests opening a specific closed {@link Tab} that was closed as part of a group. */
+    @Test
+    @MediumTest
+    public void testOpenRecentlyClosedEntry_SingleRemainingTabInGroupAsGroup_FromGroupClosure() {
+        if (mTabGroupModelFilter == null) return;
+
+        // Tab order is inverted in RecentlyClosedEntry as most recent comes first so log data in
+        // reverse.
+        final String[] urls = new String[] {getUrl(TEST_PAGE_B), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabB.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .hideTabGroups(true)
+                                    .build());
+                    mTabModel.commitTabClosure(tabA.getId());
+                    mTabModel.commitTabClosure(tabB.getId());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(1, recentEntries.size());
+        assertEntryIs(
+                recentEntries.get(0), RecentlyClosedGroup.class, new String[] {""}, titles, urls);
+
+        final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     // Tab order is inverted as most recent comes first so pick the last tab to
                     // restore ==
@@ -559,9 +647,9 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(2, tabs.size());
         Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
                 });
     }
 
@@ -578,13 +666,17 @@ public class RecentlyClosedBridgeTest {
         final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[2];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
-                    TabGroupTitleUtils.storeTabGroupTitle(tabA.getId(), "Bar");
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -599,7 +691,7 @@ public class RecentlyClosedBridgeTest {
                 urls);
 
         final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, group);
                 });
@@ -613,15 +705,346 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
         Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(2)));
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     Assert.assertEquals(
-                            "Bar", TabGroupTitleUtils.getTabGroupTitle(tabs.get(1).getId()));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
+                            "Bar", mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
                     Assert.assertEquals(
                             Arrays.asList(new Tab[] {tabs.get(1), tabs.get(2)}),
                             mTabGroupModelFilter.getRelatedTabList(tabs.get(1).getId()));
                 });
+    }
+
+    /** Tests opening a tabs that are a subset of a group. */
+    @Test
+    @MediumTest
+    public void testOpenRecentlyClosedEntry_SubsetOfTabs_FromGroupSubsetClosure_NotUndoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        // Tab order is inverted in RecentlyClosedEntry as most recent comes first so log data in
+        // reverse.
+        final String[] urls = new String[] {getUrl(TEST_PAGE_C), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB =
+                sActivityTestRule.loadUrlInNewTab(getUrl(TEST_PAGE_B), /* incognito= */ false);
+        final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
+                    mTabGroupModelFilter.mergeTabsToGroup(tabC.getId(), tabA.getId());
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabC.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabC))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(2, tabCount);
+        Assert.assertEquals(1, recentEntries.size());
+        assertEntryIs(
+                recentEntries.get(0), RecentlyClosedBulkEvent.class, new String[] {}, titles, urls);
+
+        final RecentlyClosedBulkEvent bulkEvent = (RecentlyClosedBulkEvent) recentEntries.get(0);
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, bulkEvent);
+                });
+
+        // 1. Blank tab
+        // 2. tabB
+        // 3. tabA restored in new tab.
+        // 4. tabC restored in new tab.
+        final List<Tab> tabs = getAllTabs();
+        Assert.assertEquals(4, tabs.size());
+        Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabs.get(2)));
+        Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
+        Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(3)));
+        Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(2)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
+                });
+    }
+
+    /** Tests opening a tabs that are a subset of a group. */
+    @Test
+    @MediumTest
+    public void testOpenRecentlyClosedEntry_SubsetOfTabs_FromGroupSubsetClosure_Undoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        // Tab order is inverted in RecentlyClosedEntry as most recent comes first so log data in
+        // reverse.
+        final String[] urls = new String[] {getUrl(TEST_PAGE_C), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB =
+                sActivityTestRule.loadUrlInNewTab(getUrl(TEST_PAGE_B), /* incognito= */ false);
+        final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
+                    mTabGroupModelFilter.mergeTabsToGroup(tabC.getId(), tabA.getId());
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabC.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
+                    mTabModel.commitTabClosure(tabA.getId());
+                    mTabModel.commitTabClosure(tabC.getId());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(2, tabCount);
+        Assert.assertEquals(1, recentEntries.size());
+        assertEntryIs(
+                recentEntries.get(0), RecentlyClosedBulkEvent.class, new String[] {}, titles, urls);
+
+        final RecentlyClosedBulkEvent bulkEvent = (RecentlyClosedBulkEvent) recentEntries.get(0);
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, bulkEvent);
+                });
+
+        // 1. Blank tab
+        // 2. tabB
+        // 3. tabA restored in new tab.
+        // 4. tabC restored in new tab.
+        final List<Tab> tabs = getAllTabs();
+        Assert.assertEquals(4, tabs.size());
+        Assert.assertEquals(titles[1], ChromeTabUtils.getTitleOnUiThread(tabs.get(2)));
+        Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
+        Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(3)));
+        Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(2)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
+                });
+    }
+
+    /** Tests opening a tab that is a subset of a group. */
+    @Test
+    @MediumTest
+    public void testOpenRecentlyClosedEntry_SingleTab_FromGroupSubsetClosure_Undoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        // Tab order is inverted in RecentlyClosedEntry as most recent comes first so log data in
+        // reverse.
+        final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+        final Tab tabB =
+                sActivityTestRule.loadUrlInNewTab(getUrl(TEST_PAGE_B), /* incognito= */ false);
+
+        final String[] titles = new String[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[0] = tabA.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA)).hideTabGroups(true).build());
+                    mTabModel.commitTabClosure(tabA.getId());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(2, tabCount);
+        Assert.assertEquals(1, recentEntries.size());
+        assertEntryIs(recentEntries.get(0), RecentlyClosedTab.class, new String[] {}, titles, urls);
+
+        final RecentlyClosedTab recentTab = (RecentlyClosedTab) recentEntries.get(0);
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, recentTab);
+                });
+
+        // 1. Blank tab
+        // 2. tabB
+        // 3. tabA restored in new tab.
+        final List<Tab> tabs = getAllTabs();
+        Assert.assertEquals(3, tabs.size());
+        Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(2)));
+        Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(2)));
+                });
+    }
+
+    /** Tests opening a specific closed single tab group that is not undoable. */
+    @Test
+    @MediumTest
+    public void testOpenRecentlyClosedEntry_SingleTabGroupSupported_FromGroupClosure_NotUndoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[0] = tabA.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(1, recentEntries.size());
+        assertEntryIs(
+                recentEntries.get(0),
+                RecentlyClosedGroup.class,
+                new String[] {"Bar"},
+                titles,
+                urls);
+
+        final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, group);
+                });
+
+        // 1. Blank tab
+        // 2. tabA restored in new tab group.
+        final List<Tab> tabs = getAllTabs();
+        Assert.assertEquals(2, tabs.size());
+        Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
+        Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "Bar", mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                });
+    }
+
+    /** Tests opening a specific closed single tab group. */
+    @Test
+    @MediumTest
+    public void testOpenRecentlyClosedEntry_SingleTabGroupSupported_FromGroupClosure_Undoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[0] = tabA.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA)).hideTabGroups(true).build());
+                    mTabModel.commitTabClosure(tabA.getId());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(1, recentEntries.size());
+        assertEntryIs(
+                recentEntries.get(0),
+                RecentlyClosedGroup.class,
+                new String[] {"Bar"},
+                titles,
+                urls);
+
+        final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, group);
+                });
+
+        // 1. Blank tab
+        // 2. tabA restored in new tab.
+        final List<Tab> tabs = getAllTabs();
+        Assert.assertEquals(2, tabs.size());
+        Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(1)));
+        Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    Assert.assertEquals(
+                            "Bar", mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                });
+    }
+
+    /** Tests a hiding tab group is not saved when undoable. */
+    @Test
+    @MediumTest
+    @EnableFeatures({ChromeFeatureList.TAB_GROUP_SYNC_ANDROID})
+    public void testNoRecentlyClosedEntry_ForHidingTabGroup_Undoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[0] = tabA.getTitle();
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA)).hideTabGroups(true).build());
+                    mTabModel.commitTabClosure(tabA.getId());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(0, recentEntries.size());
+    }
+
+    /** Tests a hiding tab group is not saved when not undoable. */
+    @Test
+    @MediumTest
+    @EnableFeatures({ChromeFeatureList.TAB_GROUP_SYNC_ANDROID})
+    public void testNoRecentlyClosedEntry_ForHidingTabGroup_NotUndoable() {
+        if (mTabGroupModelFilter == null) return;
+
+        final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
+                    titles[0] = tabA.getTitle();
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(0, recentEntries.size());
     }
 
     /** Tests opening a specific closed group and that it persists across restarts. */
@@ -639,15 +1062,19 @@ public class RecentlyClosedBridgeTest {
         final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[3];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     mTabGroupModelFilter.mergeTabsToGroup(tabC.getId(), tabA.getId());
-                    TabGroupTitleUtils.storeTabGroupTitle(tabA.getId(), "Bar");
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -662,7 +1089,7 @@ public class RecentlyClosedBridgeTest {
                 urls);
 
         final RecentlyClosedGroup group = (RecentlyClosedGroup) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, group);
                 });
@@ -681,32 +1108,20 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
         final int[] tabIds =
                 new int[] {tabs.get(1).getId(), tabs.get(2).getId(), tabs.get(3).getId()};
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     Assert.assertEquals(
-                            "Bar", TabGroupTitleUtils.getTabGroupTitle(tabs.get(1).getId()));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(2)));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(3)));
+                            "Bar", mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(2)));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
                     Assert.assertEquals(
                             Arrays.asList(new Tab[] {tabs.get(1), tabs.get(2), tabs.get(3)}),
                             mTabGroupModelFilter.getRelatedTabList(tabs.get(1).getId()));
                 });
 
         // Restart activity.
-        TestThreadUtils.runOnUiThreadBlocking(
-                () -> {
-                    mActivity.saveState();
-                });
-        sActivityTestRule.recreateActivity();
-        mActivity = sActivityTestRule.getActivity();
-        mTabModelSelector = mActivity.getTabModelSelectorSupplier().get();
-        CriteriaHelper.pollUiThread(mTabModelSelector::isTabStateInitialized);
-        mTabModel = mTabModelSelector.getModel(false);
-        TabModelFilter filter =
-                mTabModelSelector.getTabModelFilterProvider().getTabModelFilter(false);
-        assert filter instanceof TabGroupModelFilter;
-        mTabGroupModelFilter = (TabGroupModelFilter) filter;
+        restartActivity();
 
         // Confirm the same tabs are present with the same group structure.
         tabs.clear();
@@ -721,13 +1136,13 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(tabIds[2], tabs.get(3).getId());
         Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(3)));
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     Assert.assertEquals(
-                            "Bar", TabGroupTitleUtils.getTabGroupTitle(tabs.get(1).getId()));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(2)));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(3)));
+                            "Bar", mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(2)));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
                     Assert.assertEquals(
                             Arrays.asList(new Tab[] {tabs.get(1), tabs.get(2), tabs.get(3)}),
                             mTabGroupModelFilter.getRelatedTabList(tabs.get(1).getId()));
@@ -749,13 +1164,16 @@ public class RecentlyClosedBridgeTest {
         final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[3];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -771,7 +1189,7 @@ public class RecentlyClosedBridgeTest {
                 urls);
 
         final RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     // Tab order is inverted as most recent comes first so pick the last tab to
                     // restore ==
@@ -803,14 +1221,17 @@ public class RecentlyClosedBridgeTest {
         final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[3];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
-                    TabGroupTitleUtils.storeTabGroupTitle(tabA.getId(), "Foo");
+                    mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Foo");
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -826,7 +1247,7 @@ public class RecentlyClosedBridgeTest {
                 urls);
 
         final RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) recentEntries.get(0);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openRecentlyClosedEntry(mTabModel, event);
                 });
@@ -843,14 +1264,14 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
         Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(3)));
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     Assert.assertEquals(
-                            "Foo", TabGroupTitleUtils.getTabGroupTitle(tabs.get(1).getId()));
+                            "Foo", mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
                     Assert.assertEquals(
                             Arrays.asList(new Tab[] {tabs.get(1), tabs.get(2)}),
                             mTabGroupModelFilter.getRelatedTabList(tabs.get(1).getId()));
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(3)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
                 });
     }
 
@@ -870,14 +1291,17 @@ public class RecentlyClosedBridgeTest {
 
         final String[] groupTitles = new String[2];
         final String[] title = new String[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabC.getId(), tabB.getId());
                     title[0] = tabA.getTitle();
                     groupTitles[1] = tabB.getTitle();
                     groupTitles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabB, tabC}), true);
-                    mTabModel.closeTab(tabA, false, false, true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitTabClosure(tabB.getId());
                     mTabModel.commitTabClosure(tabA.getId());
                     mTabModel.commitTabClosure(tabC.getId());
@@ -895,7 +1319,7 @@ public class RecentlyClosedBridgeTest {
                 groupUrls);
         assertEntryIs(recentEntries.get(1), RecentlyClosedTab.class, new String[0], title, url);
 
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openMostRecentlyClosedEntry(mTabModel);
                 });
@@ -909,10 +1333,10 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(groupUrls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(1)).getSpec());
         Assert.assertEquals(groupTitles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(2)));
         Assert.assertEquals(groupUrls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertNull(TabGroupTitleUtils.getTabGroupTitle(tabs.get(1).getId()));
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
+                    Assert.assertNull(mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
                     Assert.assertEquals(
                             Arrays.asList(new Tab[] {tabs.get(1), tabs.get(2)}),
                             mTabGroupModelFilter.getRelatedTabList(tabs.get(1).getId()));
@@ -922,7 +1346,7 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(3, tabCount);
         Assert.assertEquals(1, recentEntries.size());
         assertEntryIs(recentEntries.get(0), RecentlyClosedTab.class, new String[0], title, url);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openMostRecentlyClosedEntry(mTabModel);
                 });
@@ -936,9 +1360,9 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(4, tabs.size());
         Assert.assertEquals(title[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(3)));
         Assert.assertEquals(url[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(3)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
                 });
     }
 
@@ -957,13 +1381,16 @@ public class RecentlyClosedBridgeTest {
         final Tab tabC = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
 
         final String[] titles = new String[3];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -977,7 +1404,7 @@ public class RecentlyClosedBridgeTest {
                 new String[] {""},
                 titles,
                 urls);
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     mRecentlyClosedBridge.openMostRecentlyClosedEntry(mTabModel);
                 });
@@ -994,18 +1421,185 @@ public class RecentlyClosedBridgeTest {
         Assert.assertEquals(urls[1], ChromeTabUtils.getUrlOnUiThread(tabs.get(2)).getSpec());
         Assert.assertEquals(titles[0], ChromeTabUtils.getTitleOnUiThread(tabs.get(3)));
         Assert.assertEquals(urls[0], ChromeTabUtils.getUrlOnUiThread(tabs.get(3)).getSpec());
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    Assert.assertTrue(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(1)));
-                    Assert.assertNull(TabGroupTitleUtils.getTabGroupTitle(tabs.get(1).getId()));
+                    Assert.assertTrue(mTabGroupModelFilter.isTabInTabGroup(tabs.get(1)));
+                    Assert.assertNull(mTabGroupModelFilter.getTabGroupTitle(tabs.get(1).getId()));
                     Assert.assertEquals(
                             Arrays.asList(new Tab[] {tabs.get(1), tabs.get(2)}),
                             mTabGroupModelFilter.getRelatedTabList(tabs.get(1).getId()));
-                    Assert.assertFalse(mTabGroupModelFilter.hasOtherRelatedTabs(tabs.get(3)));
+                    Assert.assertFalse(mTabGroupModelFilter.isTabInTabGroup(tabs.get(3)));
                 });
     }
 
-    // TODO(crbug.com/1307345): Add a test a case where bulk closures remain in the native service,
+    /** Tests tabs are not saved when unrestorable. */
+    @Test
+    @MediumTest
+    public void testNoRecentlyClosedEntry_FromBulkClosure_Unrestorable() {
+        final String[] urls = new String[] {getUrl(TEST_PAGE_B), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabB.getTitle();
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .saveToTabRestoreService(false)
+                                    .build());
+                    mTabModel.commitAllTabClosures();
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(0, recentEntries.size());
+    }
+
+    /** Tests tab groups are not saved when unrestorable. */
+    @Test
+    @MediumTest
+    public void testNoRecentlyClosedEntry_FromGroupClosure_Unrestorable() {
+        if (mTabGroupModelFilter == null) return;
+
+        final String[] urls = new String[] {getUrl(TEST_PAGE_B), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabB.getTitle();
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .saveToTabRestoreService(false)
+                                    .build());
+                });
+
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCount = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(1, tabCount);
+        Assert.assertEquals(0, recentEntries.size());
+    }
+
+    /** Tests closing a tab will be saved as a TAB session entry in tab restore service. */
+    @Test
+    @MediumTest
+    public void testCloseTabSaveAsTabSessionRestoreEntry() {
+        final String[] urls = new String[] {getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    titles[0] = tabA.getTitle();
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
+                    mTabModel.commitTabClosure(tabA.getId());
+                });
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList();
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    recentEntries.addAll(
+                            mRecentlyClosedBridge.getRecentlyClosedEntries(MAX_ENTRY_COUNT));
+                });
+        Assert.assertEquals(1, recentEntries.size());
+        RecentlyClosedEntry recentEntry = recentEntries.get(0);
+        // Verify recentEntry is from a TAB session entry returned by tab restore service.
+        // Note: RecentlyClosedBridgeJni.getRecentlyClosedEntries returns a RecentlyClosedTab
+        // instance for a session entry of type sessions::tab_restore::Type::TAB.
+        Assert.assertTrue(RecentlyClosedTab.class.isInstance(recentEntry));
+        final List<RecentlyClosedTab> recentTabs =
+                (List<RecentlyClosedTab>) (List<? extends RecentlyClosedEntry>) recentEntries;
+        Assert.assertEquals(1, recentTabs.size());
+        assertTabsAre(recentTabs, titles, urls);
+    }
+
+    /** Tests closing all tabs will be saved as a WINDOW session entry in tab restore service. */
+    @Test
+    @MediumTest
+    public void testCloseAllTabsSaveAsWindowSessionRestoreEntry() {
+        // Tab order is inverted in RecentlyClosedEntry as most recent comes first so log data in
+        // reverse.
+        final String[] urls = new String[] {getUrl(TEST_PAGE_B), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabB.getTitle();
+                    mTabModel.closeTabs(TabClosureParams.closeAllTabs().build());
+                    mTabModel.commitAllTabClosures();
+                });
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    recentEntries.addAll(
+                            mRecentlyClosedBridge.getRecentlyClosedEntries(MAX_ENTRY_COUNT));
+                });
+        Assert.assertEquals(1, recentEntries.size());
+        RecentlyClosedEntry recentEntry = recentEntries.get(0);
+        // Verify recentEntry is from a WINDOW session entry returned by tab restore service.
+        // Note: RecentlyClosedBridgeJni.getRecentlyClosedEntries returns a RecentlyClosedBulkEvent
+        // instance for a session entry of type sessions::tab_restore::Type::WINDOW.
+        Assert.assertTrue(RecentlyClosedBulkEvent.class.isInstance(recentEntry));
+        final RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) recentEntry;
+        final List<RecentlyClosedTab> recentTabs = event.getTabs();
+        Assert.assertEquals(2, recentTabs.size());
+        assertTabsAre(recentTabs, titles, urls);
+    }
+
+    /**
+     * Tests closing multiple tabs will be saved as a WINDOW session entry in tab restore service.
+     */
+    @Test
+    @MediumTest
+    public void testCloseMultipleTabsSaveAsWindowSessionRestoreEntry() {
+        // Tab order is inverted in RecentlyClosedEntry as most recent comes first so log data in
+        // reverse.
+        final String[] urls = new String[] {getUrl(TEST_PAGE_B), getUrl(TEST_PAGE_A)};
+        final Tab tabA = sActivityTestRule.loadUrlInNewTab(urls[1], /* incognito= */ false);
+        final Tab tabB = sActivityTestRule.loadUrlInNewTab(urls[0], /* incognito= */ false);
+
+        final String[] titles = new String[2];
+        final int[] tabCountBeforeClosingTabs = new int[1];
+        ThreadUtils.runOnUiThreadBlocking(
+                () -> {
+                    titles[1] = tabA.getTitle();
+                    titles[0] = tabB.getTitle();
+                    tabCountBeforeClosingTabs[0] = mTabModel.getCount();
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .hideTabGroups(true)
+                                    .build());
+                    mTabModel.commitAllTabClosures();
+                });
+        final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
+        final int tabCountAfterClosingTabs = getRecentEntriesAndReturnActiveTabCount(recentEntries);
+        Assert.assertEquals(3, tabCountBeforeClosingTabs[0]);
+        Assert.assertEquals(1, tabCountAfterClosingTabs);
+        Assert.assertEquals(1, recentEntries.size());
+        RecentlyClosedEntry recentEntry = recentEntries.get(0);
+        // Verify recentEntry is from a WINDOW session entry returned by tab restore service.
+        // Note: RecentlyClosedBridgeJni.getRecentlyClosedEntries returns a RecentlyClosedBulkEvent
+        // instance for a session entry of type sessions::tab_restore::Type::WINDOW.
+        Assert.assertTrue(RecentlyClosedBulkEvent.class.isInstance(recentEntry));
+        final RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) recentEntry;
+        final List<RecentlyClosedTab> recentTabs = event.getTabs();
+        Assert.assertEquals(2, recentTabs.size());
+        assertTabsAre(recentTabs, titles, urls);
+    }
+
+    // TODO(crbug.com/40218713): Add a test a case where bulk closures remain in the native service,
     // but the flag state is flipped.
 
     private Tab findTabWithUrlAndTitle(TabList list, String url, String title) {
@@ -1026,10 +1620,12 @@ public class RecentlyClosedBridgeTest {
 
     private Tab freezeTab(Tab tab) {
         Tab[] frozen = new Tab[1];
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     TabState state = TabStateExtractor.from(tab);
-                    mActivity.getCurrentTabModel().closeTab(tab);
+                    mActivity
+                            .getCurrentTabModel()
+                            .closeTabs(TabClosureParams.closeTab(tab).allowUndo(false).build());
                     frozen[0] =
                             mActivity.getCurrentTabCreator().createFrozenTab(state, tab.getId(), 1);
                 });
@@ -1072,7 +1668,7 @@ public class RecentlyClosedBridgeTest {
 
         RecentlyClosedBulkEvent event = (RecentlyClosedBulkEvent) entry;
         final List<String> expectedTitles = Arrays.asList(groupTitles);
-        final List<String> actualTitles = new ArrayList<>(event.getGroupIdToTitleMap().values());
+        final List<String> actualTitles = new ArrayList<>(event.getTabGroupIdToTitleMap().values());
         Assert.assertEquals(expectedTitles.size(), actualTitles.size());
         Assert.assertTrue(
                 expectedTitles.containsAll(actualTitles)
@@ -1082,7 +1678,7 @@ public class RecentlyClosedBridgeTest {
 
     private List<Tab> getAllTabs() {
         final List<Tab> list = new ArrayList<>();
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     for (int i = 0; i < mTabModel.getCount(); i++) {
                         list.add(mTabModel.getTabAt(i));
@@ -1094,11 +1690,24 @@ public class RecentlyClosedBridgeTest {
     private int getRecentEntriesAndReturnActiveTabCount(final List<RecentlyClosedEntry> entries) {
         final int[] tabCount = new int[1];
         entries.clear();
-        TestThreadUtils.runOnUiThreadBlocking(
+        ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     entries.addAll(mRecentlyClosedBridge.getRecentlyClosedEntries(MAX_ENTRY_COUNT));
                     tabCount[0] = mTabModel.getCount();
                 });
         return tabCount[0];
+    }
+
+    private void restartActivity() {
+        ThreadUtils.runOnUiThreadBlocking(mActivity::saveState);
+        sActivityTestRule.recreateActivity();
+        mActivity = sActivityTestRule.getActivity();
+        mTabModelSelector = mActivity.getTabModelSelectorSupplier().get();
+        CriteriaHelper.pollUiThread(mTabModelSelector::isTabStateInitialized);
+        mTabModel = mTabModelSelector.getModel(false);
+        TabModelFilter filter =
+                mTabModelSelector.getTabModelFilterProvider().getTabModelFilter(false);
+        assert filter instanceof TabGroupModelFilter;
+        mTabGroupModelFilter = (TabGroupModelFilter) filter;
     }
 }
