@@ -18,7 +18,6 @@ import android.text.TextUtils;
 
 import androidx.test.core.app.ApplicationProvider;
 
-import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
@@ -35,7 +34,6 @@ import org.robolectric.shadows.ShadowNotificationManager;
 import org.chromium.base.Callback;
 import org.chromium.base.FeatureList;
 import org.chromium.base.metrics.RecordHistogram;
-import org.chromium.base.metrics.UmaRecorderHolder;
 import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.chrome.R;
 import org.chromium.chrome.browser.DefaultBrowserInfo2;
@@ -44,7 +42,7 @@ import org.chromium.chrome.browser.notifications.NotificationUmaTracker;
 import org.chromium.components.feature_engagement.FeatureConstants;
 import org.chromium.components.feature_engagement.Tracker;
 
-import java.util.Collections;
+import java.util.Map;
 
 /** Unit tests for {@link ReengagementNotificationController}. */
 @RunWith(BaseRobolectricTestRunner.class)
@@ -76,18 +74,14 @@ public class ReengagementNotificationControllerTest {
     @Before
     public void setUp() throws Exception {
         FeatureList.setTestFeatures(
-                Collections.singletonMap(ChromeFeatureList.REENGAGEMENT_NOTIFICATION, true));
+                Map.of(
+                        ChromeFeatureList.REENGAGEMENT_NOTIFICATION,
+                        true));
         mContext = ApplicationProvider.getApplicationContext();
         mShadowNotificationManager =
                 Shadows.shadowOf(
                         (NotificationManager)
                                 mContext.getSystemService(Context.NOTIFICATION_SERVICE));
-        UmaRecorderHolder.resetForTesting();
-    }
-
-    @After
-    public void tearDown() {
-        UmaRecorderHolder.resetForTesting();
     }
 
     @Test
